[package]
name = "vocabulaire"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Herbert"]

[dependencies]
thiserror = "2.0"
actix-web = "4.10"
validator = { version = "0.20", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11"
async-trait = "0.1"
toml = "0.8"
mongodb = "3.2"
serial_test = "3.2"
