[package]
name = "vocabulaire"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Herbert"]

[dependencies]
thiserror = "2.0"
actix-web = "4.10"
actix-rt = "2.10"
validator = { version = "0.20", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11"
async-trait = "0.1"
toml = "0.8"
mongodb = "3.2"
serial_test = "3.2"


[dev-dependencies]
cucumber = "0.21"
futures = "0.3"
tokio = { version = "1.45", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }


[[test]]
name = "example"
harness = false

[[test]]
name = "voci"
harness = false
